Integrated the existing rules reference into the help system.

--- a/com.waratek.rules.ui.help/build.properties
+++ b/com.waratek.rules.ui.help/build.properties
@@ -3,7 +3,6 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               html/,\
                *.xml
 src.includes = html/,\
                META-INF/,\
@@ -13,4 +12,5 @@ src.includes = html/,\
                tocconcepts.xml,\
                tocgettingstarted.xml,\
                tocreference.xml,\
-               toctasks.xml
+               toctasks.xml,\
+               html/reference/images/
