Updates to tidy up the look of the help and include the task information.

--- a/com.waratek.rules.ui.emf.editor/plugin.properties
+++ b/com.waratek.rules.ui.emf.editor/plugin.properties
@@ -42,10 +42,10 @@ _UI_Wizard_category = Waratek
 
 _UI_CreateModelError_message = Problems encountered in file "{0}"
 
-_UI_RulesModelWizard_label = Rules Model
-_UI_RulesModelWizard_description = Create a new Rules model
+_UI_RulesModelWizard_label = Rules Definition File
+_UI_RulesModelWizard_description = Create a new Rules Definition File
 
-_UI_RulesEditor_label = Rules Model Editor
+_UI_RulesEditor_label = RDF Editor
 
 _UI_RulesEditorFilenameDefaultBase = My
 _UI_RulesEditorFilenameExtensions = rdf
