Added html directory to the build manifest.

--- a/com.waratek.rules.ui.help/build.properties
+++ b/com.waratek.rules.ui.help/build.properties
@@ -3,9 +3,9 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               *.xml
-src.includes = html/,\
-               META-INF/,\
+               *.xml,\
+               html/
+src.includes = META-INF/,\
                plugin.xml,\
                src/,\
                toc.xml,\
@@ -13,4 +13,4 @@ src.includes = html/,\
                tocgettingstarted.xml,\
                tocreference.xml,\
                toctasks.xml,\
-               html/reference/images/
+               html/
