Changed the network rule port attribute to be a string to handle wildcards

--- a/com.waratek.rules.ui.emf.edit/plugin.properties
+++ b/com.waratek.rules.ui.emf.edit/plugin.properties
@@ -81,3 +81,4 @@ _UI_Log_trace_literal = Trace
 _UI_Scope_jvc_literal = JVC
 _UI_Scope_global_literal = Global
 _UI_Database_Oracle_literal = oracle
+_UI_Database_oracle_literal = Oracle
