--- a/com.waratek.rules.ui.eef/src-gen/com/waratek/rules/providers/rulesMessages.properties
+++ b/com.waratek.rules.ui.eef/src-gen/com/waratek/rules/providers/rulesMessages.properties
@@ -20,29 +20,29 @@ ClassLinkPropertiesEditionPart_PropertiesGroupLabel=Properties
 Native_PropertiesEditionPart_PropertiesGroupLabel=Properties
 SQLInjectionPropertiesEditionPart_PropertiesGroupLabel=Properties
 RuleDocument_ReadOnly=This property is read only
-RuleDocument_Part_Title=Base
+RuleDocument_Part_Title=RuleDocument
 File_ReadOnly=This property is read only
-File_Part_Title=Base
+File_Part_Title=File
 Network_ReadOnly=This property is read only
-Network_Part_Title=Base
+Network_Part_Title=Network
 ReflectPackage_ReadOnly=This property is read only
-ReflectPackage_Part_Title=Base
+ReflectPackage_Part_Title=ReflectPackage
 ReflectClass_ReadOnly=This property is read only
-ReflectClass_Part_Title=Base
+ReflectClass_Part_Title=ReflectClass
 ReflectConstructor_ReadOnly=This property is read only
-ReflectConstructor_Part_Title=Base
+ReflectConstructor_Part_Title=ReflectConstructor
 ReflectMethod_ReadOnly=This property is read only
-ReflectMethod_Part_Title=Base
+ReflectMethod_Part_Title=ReflectMethod
 ReflectField_ReadOnly=This property is read only
-ReflectField_Part_Title=Base
+ReflectField_Part_Title=ReflectField
 ThrowableClass_ReadOnly=This property is read only
-ThrowableClass_Part_Title=Base
+ThrowableClass_Part_Title=ThrowableClass
 ClassLink_ReadOnly=This property is read only
-ClassLink_Part_Title=Base
+ClassLink_Part_Title=ClassLink
 Native__ReadOnly=This property is read only
-Native__Part_Title=Base
+Native__Part_Title=Native
 SQLInjection_ReadOnly=This property is read only
-SQLInjection_Part_Title=Base
+SQLInjection_Part_Title=SQLInjection
 RuleDocumentPropertiesEditionPart_NameLabel=Name : 
 RuleDocumentPropertiesEditionPart_ScopeLabel=Scope : 
 FilePropertiesEditionPart_IdLabel=Id : 
