--- a/com.waratek.rules.ui.emf.editor/build.properties
+++ b/com.waratek.rules.ui.emf.editor/build.properties
@@ -1,15 +1,14 @@
-# Copyright 2014 Waratek Ltd.
-
 bin.includes = .,\
                icons/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties
-jars.compile.order = .
-source.. = src/
+               plugin.properties,\
+               plugin_customization.ini
 output.. = bin
+jars.compile.order = .
 src.includes = META-INF/,\
                icons/,\
                plugin.properties,\
                plugin.xml,\
                src/
+source.. = src/
