--- a/com.waratek.rules.ui.emf.editor/plugin.properties
+++ b/com.waratek.rules.ui.emf.editor/plugin.properties
@@ -70,7 +70,7 @@ _UI_File_label = &File
 _UI_Question_title = Question
 _UI_Error_title = Error
 _WARN_No_Editor = There is no editor registered for the file "{0}".
-_UI_Application_title = Rules Builder
+_UI_Application_title = Security Rules Editor
 _UI_Menu_File_label = &File
 _UI_Menu_New_label = &New
 _UI_Menu_Open_label = &Open...
@@ -81,9 +81,9 @@ _UI_Menu_Edit_label = &Edit
 _UI_Menu_Window_label = &Window
 _UI_Menu_Help_label = &Help
 _UI_Menu_About_label = Rules &About...
-_UI_About_title = Rules Builder
-_UI_About_text = The Waratek Rules Builder is used to create custom rules for the Waratek Secure VM for Java.
+_UI_About_title = Security Rules Editor
+_UI_About_text = The Waratek Security Rules Editor is used to create custom rules for Waratek AppSec for Java and Waratek Locker.
 _UI_RulesModelWizard_ActionSet_label = Rules Model Action Set
 
-productName=Rules Builder
-productDescription=The Waratek Rules Builder is used to create custom rules for the Waratek Secure VM for Java.
+productName=Security Rules Editor
+productDescription=The Waratek Security Rules Editor is used to create custom rules for Waratek AppSec for Java and Waratek Locker.
