Added trademark statements.

--- a/com.waratek.rules.ui.emf.editor/plugin.properties
+++ b/com.waratek.rules.ui.emf.editor/plugin.properties
@@ -82,7 +82,7 @@ _UI_Menu_Window_label = &Window
 _UI_Menu_Help_label = &Help
 _UI_Menu_About_label = Rules &About...
 _UI_About_title = Security Rules Editor
-_UI_About_text = The Waratek Security Rules Editor is used to create custom rules for Waratek AppSec for Java and Waratek Locker.
+_UI_About_text = The Waratek Security Rules Editor is used to create custom rules for Waratek AppSec for Java and Waratek Locker.\n\nWaratek, Waratek AppSecurity for Java, Waratek Locker and Waratek Security Rules Editor are Trademarks of Waratek and may not be used without written permission.
 _UI_RulesModelWizard_ActionSet_label = Rules Model Action Set
 
 productName=Security Rules Editor
