Updated to include the new abstract lines class

--- a/com.waratek.rules.ui.emf.edit/plugin.properties
+++ b/com.waratek.rules.ui.emf.edit/plugin.properties
@@ -87,3 +87,5 @@ _UI_RuleDocument_version_feature = Version
 _UI_RuleDocument_comments_feature = Comments
 _UI_Comment_comment_feature = Comment
 _UI_Version_one_literal = one
+_UI_Lines_type = Lines
+_UI_RuleDocument_lines_feature = Lines
