Regen to update based on new lines class

--- a/com.waratek.rules.ui.emf.editor/plugin.properties
+++ b/com.waratek.rules.ui.emf.editor/plugin.properties
@@ -42,13 +42,13 @@ _UI_Wizard_category = Waratek
 
 _UI_CreateModelError_message = Problems encountered in file "{0}"
 
-_UI_RulesModelWizard_label = Rules Definition File
-_UI_RulesModelWizard_description = Create a new Rules Definition File
+_UI_RulesModelWizard_label = Rules File
+_UI_RulesModelWizard_description = Create a new Rules File
 
-_UI_RulesEditor_label = RDF Editor
+_UI_RulesEditor_label = Rules Editor
 
 _UI_RulesEditorFilenameDefaultBase = My
-_UI_RulesEditorFilenameExtensions = rdf
+_UI_RulesEditorFilenameExtensions = rules
 
 _UI_Wizard_label = New
 
