Regen to accomodate the added mysql support

--- a/com.waratek.rules.ui.emf.edit/plugin.properties
+++ b/com.waratek.rules.ui.emf.edit/plugin.properties
@@ -89,3 +89,6 @@ _UI_Comment_comment_feature = Comment
 _UI_Version_one_literal = one
 _UI_Lines_type = Lines
 _UI_RuleDocument_lines_feature = Lines
+_UI_SQLInjection_ansiQuotes_feature = Ansi Quotes
+_UI_SQLInjection_noBackSlashEscapes_feature = No Back Slash Escapes
+_UI_Database_mysql_literal = MySQL
