Moved actions for native rules to be their own action set.

--- a/com.waratek.rules.ui.emf.edit/plugin.properties
+++ b/com.waratek.rules.ui.emf.edit/plugin.properties
@@ -92,3 +92,7 @@ _UI_RuleDocument_lines_feature = Lines
 _UI_SQLInjection_ansiQuotes_feature = Ansi Quotes
 _UI_SQLInjection_noBackSlashEscapes_feature = No Back Slash Escapes
 _UI_Database_mysql_literal = MySQL
+_UI_Native_nativeAction_feature = Native Action
+_UI_NativeAction_blacklist_literal = Blacklist
+_UI_NativeAction_greylist_literal = Greylist
+_UI_NativeAction_whitelist_literal = Whitelist
