Updated to new rule format in class link and reflection.

--- a/com.waratek.rules.ui.emf.edit/plugin.properties
+++ b/com.waratek.rules.ui.emf.edit/plugin.properties
@@ -96,3 +96,31 @@ _UI_Native_nativeAction_feature = Native Action
 _UI_NativeAction_blacklist_literal = Blacklist
 _UI_NativeAction_greylist_literal = Greylist
 _UI_NativeAction_whitelist_literal = Whitelist
+_UI_Reflection_reflectionParameter_feature = Reflection Parameter
+_UI_Reflection_qualifiedName_feature = Qualified Name
+_UI_Reflection_signature_feature = Signature
+_UI_ClassLink_qualifiedName_feature = Qualified Name
+_UI_ClassLink_classLinkParameter_feature = Class Link Parameter
+_UI_ClassLink_signature_feature = Signature
+_UI_Category_file_literal = File
+_UI_Category_network_literal = Network
+_UI_Category_classlink_literal = Classlink
+_UI_Category_reflect_literal = Reflect
+_UI_Category_throwable_literal = Throwable
+_UI_Category_native_literal = Native
+_UI_Category_sql_literal = SQL
+_UI_SubCategory_class_literal = Class
+_UI_SubCategory_throw_literal = Throw
+_UI_SubCategory_library_literal = Library
+_UI_SubCategory_database_literal = Database
+_UI_ReflectionParameter_constructor_literal = Constructor
+_UI_ReflectionParameter_method_literal = Method
+_UI_ReflectionParameter_field_literal = Field
+_UI_DatabaseMode_ansiquotes_literal = ansiquotes
+_UI_DatabaseMode_nobackslashescapes_literal = nobackslashescapes
+_UI_Option_off_literal = Off
+_UI_Option_on_literal = On
+_UI_ClassLinkParameter_class_literal = class
+_UI_ClassLinkParameter_constructor_literal = constructor
+_UI_ClassLinkParameter_method_literal = method
+_UI_ClassLinkParameter_field_literal = field
